# muse

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: fresh-venv-smoke.yml  tests.yml
docs/: CHAT_COMPLETION.md  CONFIG.md  HF_PLUGINS.md  MODEL_SCRIPTS.md  RESOLVERS.md
docs/benchmarks/: 2026-07-08-llm-baseline.json  2026-07-08-llm-baseline.md  2026-07-08-llm-steady.json  2026-07-08-llm-steady.md  2026-07-08-llm-streaming-alternating.json  2026-07-08-modalities-after.json  2026-07-08-modalities-after.md  2026-07-08-modalities-baseline.json  2026-07-08-modalities-baseline.md  2026-07-08-triage.md
docs/plans/: 2026-04-14-plugin-discovery-mime-modalities.md  README.md
docs/superpowers/: HANDOFF-2026-06-18-gpu-runtime-upgrades.md  README.md
docs/superpowers/plans/: 2026-03-16-gpu-server-quality.md  2026-04-27-image-animation-modality.md  (+46 more)
examples/: INDEX.md  README.md  _driver.py
examples/audio_speech/: metadata.json
examples/audio_transcription/: metadata.json  transcript.json  transcript.txt
examples/chat_completion/: metadata.json  response.json  response.txt
examples/concurrent/: RESULTS.md  loaded_snapshots.json  results.json  stress_test.py
examples/embedding_text/: embeddings.json  metadata.json
examples/image_cv/: detections.json  metadata.json
examples/image_generation/: metadata.json
examples/text_classification/: metadata.json  moderations.json
examples/text_rerank/: metadata.json  rerank.json
examples/text_summarization/: metadata.json  summary.json  summary.txt
narro/: catalog.py  cli.py  decode_only.py  server.py  tts.py
narro/backends/: base.py  transformers.py
narro/hugo/: cli.py  extract.py
narro/models/: bark.py  kokoro.py  parler.py  xtts.py
narro/utils/: text_normalizer.py
scripts/: preflight.py  smoke_fresh_venv.py
scripts/bench/: _stats.py  bench_llm.py  bench_modalities.py
src/muse/: __init__.py  cli.py  curated.yaml
tests/: test_alignment.py  test_bark.py  test_cli.py  test_encode_decode.py  test_hugo_cli.py  test_hugo_extract.py  test_kokoro.py  test_packaging.py  test_parler.py  test_performance.py  test_preflight.py  test_pyproject.py  test_quality_check.py  test_tts_coverage.py  test_xtts.py
tests/admin/: test_auth.py  test_client.py  test_e2e_admin_router.py  test_errors.py  test_jobs.py  test_operations.py  test_warmup_endpoint.py
tests/cli_impl/: test_concurrency_fixes.py  test_config_cli.py  test_config_integration_server.py  test_console.py  test_e2e_asr.py  test_e2e_audio_embedding.py  test_e2e_idle_eviction.py  test_e2e_image_embedding.py  test_e2e_image_segmentation.py  test_e2e_image_upscale.py  test_e2e_images_edits_variations.py  test_e2e_lazy_supervisor.py  test_e2e_moderations.py  test_e2e_queueing.py  test_e2e_rerank.py  test_e2e_summarization.py  test_e2e_supervisor.py  test_e2e_supervisor_hunyuan3d.py  test_e2e_supervisor_shape_e.py  test_e2e_supervisor_trellis.py  test_e2e_supervisor_vlm.py  test_e2e_translation_seam.py  test_e2e_video_generation.py  test_federation_app.py  test_federation_cli.py  test_federation_e2e.py  test_gateway.py  test_gateway_default_model.py  test_gateway_lazy.py  test_gateway_telemetry.py  test_idle_sweeper.py  test_load_director.py  test_load_director_concurrency.py  test_load_director_telemetry.py  test_main_error_handling.py  test_models_info_display.py  test_models_list.py  test_probe.py  test_probe_worker.py  test_probe_worker_status.py  (+14 more)
tests/core/: test_catalog.py  test_config_registry.py  test_config_resolve.py  test_config_writers.py  test_curated.py  test_curated_image_processor_overrides.py  test_curated_vlm.py  test_discovery.py  test_errors.py  test_hf_plugin_discovery.py  test_hf_resolver_dispatch.py  test_image_preprocessing.py  test_install.py  test_memory_probe.py  test_net_fetch.py  test_no_stray_env_reads.py  test_registry.py  test_resolvers.py  test_resolvers_hf.py  test_runtime_helpers.py  test_runtime_helpers_meta.py  test_server.py  test_venv.py
tests/federation/: test_nodes.py  test_public_api.py  test_registry.py  test_router.py  test_state.py
tests/integration/: conftest.py  test_remote_3d_hunyuan3d.py  test_remote_3d_shape_e.py  test_remote_3d_trellis.py  test_remote_animations.py  test_remote_asr.py  test_remote_audio_embedding.py  test_remote_audio_generation.py  test_remote_image_embedding.py  test_remote_image_segmentation.py  test_remote_image_upscale.py  test_remote_images_edits_variations.py  test_remote_moderations.py  test_remote_rerank.py  test_remote_summarization.py  test_remote_tools.py  test_remote_translation.py  test_remote_video_generation.py  test_remote_vlm.py
tests/mcp/: conftest.py  test_binary_io.py  test_binary_io_security.py  test_cli_integration.py  test_client.py  test_http_sse.py  test_no_token_leakage.py  test_server.py  test_stdio.py  test_tools_admin.py  test_tools_inference_audio.py  test_tools_inference_image.py  test_tools_inference_text.py  test_tools_inference_video.py
tests/modalities/: test_error_hygiene_meta.py
tests/models/: test_ace_step_v1_3_5b.py  test_all_minilm_l6_v2.py  test_animatediff_motion_v3.py  test_ast_audioset.py  test_bark_small.py  test_bart_large_cnn.py  test_bge_reranker_v2_m3.py  test_deberta_v3_base_zeroshot_v2_0.py  test_depth_anything_v2_small.py  test_detr_resnet_50.py  test_dinov2_small.py  test_kokoro_82m.py  test_m2m100_418m.py  test_manifest_device_meta.py  test_mert_v1_95m.py  test_nv_embed_v2.py  test_pip_extras_audit.py  test_qwen3_embedding_0_6b.py  test_sam2_hiera_tiny.py  test_sd_turbo.py  test_smolvlm_256m_instruct.py  test_soprano_80m.py  test_stable_audio_open_1_0.py  test_stable_diffusion_x4_upscaler.py  test_supertonic_3.py  test_triposr.py  test_trocr_base_printed.py  test_twitter_roberta_base_sentiment_latest.py  test_vitpose_base_simple.py  test_wan2_1_t2v_1_3b.py
tests/observability/: test_dashboard_auth.py  test_dashboard_router.py  test_events.py  test_log_tickets.py  test_logs.py  test_public_api.py  test_recorder.py  test_sampler.py  test_store.py
tests/scripts/: conftest.py  test_bench_stats.py  test_smoke_fresh_venv.py
(+517 files in other folders)
