[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muse"
version = "0.17.2"
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" },
]
description = "Muse: model-agnostic multi-modality generation server (audio, images)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "huggingface_hub",
  "numpy",
  "pyyaml",
  "requests",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/queelius/muse"
Issues = "https://github.com/queelius/muse/issues"

[project.optional-dependencies]
# Server runtime. python-multipart is required by FastAPI any time a
# route uses Form(...) or UploadFile = File(...); the
# audio/transcription routes need it at import time (the @router.post
# decorator inspects parameter types and raises if multipart is
# missing). Without this entry, per-model venvs that install
# muse[server] would crash when discover_modalities mounts the
# audio_transcription router.
server = ["fastapi", "uvicorn", "sse-starlette", "httpx", "python-multipart"]

# Audio modality (TTS)
audio = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "scipy",
  "inflect",
  "unidecode",
]
audio-kokoro = ["muse[audio]", "kokoro", "soundfile", "misaki[en]"]

# Images modality (diffusion)
images = [
  "torch>=2.1.0",
  "diffusers>=0.27.0",
  # transformers is required by StableDiffusionPipeline (CLIP text
  # encoder) but diffusers lists it as an optional extra.
  "transformers>=4.36.0",
  "accelerate",
  "Pillow",
  "safetensors",
]

# Embeddings modality
embeddings = [
  "torch>=2.1.0",
  "sentence-transformers>=2.2.0",
]

# Development
dev = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-timeout"]

[project.scripts]
muse = "muse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["muse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
markers = [
    "slow: end-to-end test that spawns real subprocesses (skipped by default CI lanes)",
]
