[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The short name `muse` is squatted by an
# abandoned 2010s placeholder; `pymuse`/`musepy` are owned by the
# astronomy community (ESO's MUSE instrument). The Python import path,
# CLI binary, GitHub repo, and project identity stay `muse`; only the
# PyPI label is `museq`. See docs/superpowers/specs/ for context.
name = "museq"
version = "0.54.4"
authors = [
  { name="Alex Towell", email="lex@metafunctor.com" },
]
description = "Self-hostable OpenAI-compatible multi-modality AI server: 20 modalities (chat, image, audio, video, 3D, embeddings, OCR, segmentation), plugin runtimes (PyTorch, diffusers, llama-cpp-python)."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "machine-learning", "llm", "openai-compatible",
    "multimodal", "text-to-speech", "speech-to-text",
    "text-to-image", "image-generation", "embeddings",
    "vision-language-model", "3d-generation", "server",
    "self-hosted", "huggingface", "pytorch", "diffusers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
  "huggingface_hub",
  "numpy",
  "pyyaml",
  "requests",
  # CLI: typer wraps click for argument parsing with type-annotated
  # commands; rich for tables, status glyphs, and color in `muse
  # models list` / `info` / `search` / `refresh`. Both are pure-Python,
  # tiny, and import in <100ms total so `muse --help` stays fast.
  "typer>=0.12.0",
  "rich>=13.0.0",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/queelius/muse"
Repository = "https://github.com/queelius/muse"
Documentation = "https://github.com/queelius/muse/blob/main/README.md"
Changelog = "https://github.com/queelius/muse/releases"
Issues = "https://github.com/queelius/muse/issues"

[project.optional-dependencies]
# Server runtime. python-multipart is required by FastAPI any time a
# route uses Form(...) or UploadFile = File(...); the
# audio/transcription routes need it at import time (the @router.post
# decorator inspects parameter types and raises if multipart is
# missing). Without this entry, per-model venvs that install
# muse[server] would crash when discover_modalities mounts the
# audio_transcription router.
server = ["fastapi", "uvicorn", "sse-starlette", "httpx", "python-multipart", "psutil>=5.9", "nvidia-ml-py>=12.0", "mcp>=1.0.0"]

# Audio modality (TTS)
audio = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "scipy",
  "inflect",
  "unidecode",
]
audio-kokoro = ["museq[audio]", "kokoro", "soundfile", "misaki[en]"]

# Images modality (diffusion)
images = [
  "torch>=2.1.0",
  "diffusers>=0.27.0",
  # transformers is required by StableDiffusionPipeline (CLIP text
  # encoder) but diffusers lists it as an optional extra.
  "transformers>=4.36.0",
  "accelerate",
  "Pillow",
  "safetensors",
  "imageio[ffmpeg]>=2.31.0",  # for animated MP4 export
]

# Embeddings modality
embeddings = [
  "torch>=2.1.0",
  "sentence-transformers>=2.2.0",
]

# Development
dev = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-timeout", "tomli; python_version < \"3.11\""]

[project.scripts]
muse = "muse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["muse*"]

# Ship non-Python runtime data. curated.yaml (recommended-models list) and
# chat_formats.yaml (GGUF chat-template map) are loaded at runtime via
# importlib.resources.files("muse"); without this they are excluded from
# the wheel and every pip-installed user sees zero curated models and
# degraded GGUF chat-format detection. The "*" key applies to all packages
# so future per-modality yaml/json assets are picked up automatically.
[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
markers = [
    "slow: end-to-end test that spawns real subprocesses (skipped by default CI lanes)",
]
